# zoterable

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: config.rs  main.rs  remarkable.rs  sync.rs  zotero.rs
