[package]
name = "zoterable"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
description = "Sync PDF attachments from Zotero to a reMarkable tablet via their cloud APIs"
authors = ["Giovanni Biagini"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gbiagini/zoterable"
homepage = "https://github.com/gbiagini/zoterable"
keywords = ["zotero", "remarkable", "pdf", "sync", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
uuid = { version = "1", features = ["v4"] }
